2005-03-12  Joe Shaw  <joeshaw@novell.com>

	* mono/GMime.metadata: Tag the return values of
	MessagePart.Message, Message.MimePart, Multipart.GetPart() and
	Multipart.GetSubpartFromContentId() as "owned", meaning that
	gtk-sharp should not ref them but take ownership of the single
	reference that's returned from the underlying C functions.

	* mono/Message.custom: Don't instantiate InternetAddress
	objects, just deal with the C APIs directly.  This saves us a
	lot of allocations and fixes a bug in gtk-sharp where opaque
	objects would leak references.

2005-03-07  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-header.c (g_mime_header_prepend): New function to
	prepend a header to the list.

2005-03-07  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated.

	* configure.in: Bumped version to 2.1.13

	* gmime/gmime-charset.c (g_mime_charset_step): Don't bother with
	MAX() for cases where we'll just end up setting level to 2.

2005-03-07  Joe Shaw  <joeshaw@novell.com>

	* mono/GMime.metadata: Add the "owned" flag to the return
	value parameter for ConstructMessage on the GMimeParser,
	because this method returns a new object with a refcount
	of 1.  The binding needs to take ownership of the object.

2005-02-14  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated

	* configure.in: Bumped version to 2.1.12

2005-01-31  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (header_fold): Don't break apart rfc2047
	encoded tokens.

2005-01-18  Jeffrey Stedfast  <fejj@novell.com>

	* README: Updated

	* configure.in: Bumped version to 2.1.11

2005-01-26  Joe Shaw  <joeshaw@novell.com>

	* mono/GMime.metdata: The gtk-sharp generator doesn't handle
	"const unsigned char *" well, so override those methods in
	metadata.

2005-01-20  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-param.c (param_list_format): If folding mode is
	enabled, terminate the header with a \n.

2005-01-19  Jeffrey Stedfast  <fejj@novell.com>
